# solana-arbitrage-watcher

./: .gitignore  Cargo.toml  LICENSE  README.md  style-guide.md
.github/workflows/: ci.yml
src/: config.rs  main.rs  test_utils.rs  util.rs
src/arbitrage/: calculator.rs  detector.rs  mod.rs
src/output/: formatter.rs  mod.rs
src/performance/: metrics.rs  mod.rs  monitor.rs
src/price/: mod.rs  processor.rs  types.rs
src/websocket/: binance.rs  mod.rs  reconnect.rs  solana.rs
