[package]
name = "solana-arbitrage-watcher"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
url = "2.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync", "signal"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
